--- a/config/configtx.yaml
+++ b/config/configtx.yaml
@@ -57,11 +57,14 @@ Organizations:
             Admins:
                 Type: Signature
                 Rule: "OR('Bank1MSP.admin')"
+            Endorsement:
+                Type: Signature
+                Rule: "OR('Bank1MSP.peer')"
         AnchorPeers:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer0
+            - Host: peer0.bank1.banksco.com
               Port: 7051
     - &Bank2
         # DefaultOrg defines the organization which is used in the sampleconfig
@@ -70,7 +73,6 @@ Organizations:
         # ID to load the MSP definition as
         ID: Bank2MSP
         MSPDir: crypto-config/peerOrganizations/bank2.banksco.com/msp
-
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
         #   /Channel/<Application|Orderer>/<OrgName>/<PolicyName>
@@ -84,11 +86,14 @@ Organizations:
             Admins:
                 Type: Signature
                 Rule: "OR('Bank2MSP.admin')"
+            Endorsement:
+                Type: Signature
+                Rule: "OR('Bank2MSP.peer')"
         AnchorPeers:
             # AnchorPeers defines the location of peers which can be used
             # for cross org gossip communication.  Note, this value is only
             # encoded in the genesis block in the Application section context
-            - Host: peer3
+            - Host: peer0.bank2.banksco.com
               Port: 7051
 
 ################################################################################
@@ -115,52 +120,37 @@ Capabilities:
     # supported by both.
     # Set the value of the capability to true to require it.
     Channel: &ChannelCapabilities
-        # V1.4.3 for Channel is a catchall flag for behavior which has been
-        # determined to be desired for all orderers and peers running at the v1.4.3
-        # level, but which would be incompatible with orderers and peers from
-        # prior releases.
-        # Prior to enabling V1.4.3 channel capabilities, ensure that all
-        # orderers and peers on a channel are at v1.4.3 or later.
-        V1_4_3: true
-        # V1.3 for Channel enables the new non-backwards compatible
-        # features and fixes of fabric v1.3
-        V1_3: false
-        # V1.1 for Channel enables the new non-backwards compatible
-        # features and fixes of fabric v1.1
-        V1_1: false
+        # V2_0 capability ensures that orderers and peers behave according
+        # to v2.0 channel capabilities. Orderers and peers from
+        # prior releases would behave in an incompatible way, and are therefore
+        # not able to participate in channels at v2.0 capability.
+        # Prior to enabling V2.0 channel capabilities, ensure that all
+        # orderers and peers on a channel are at v2.0.0 or later.
+        V2_0: true
 
     # Orderer capabilities apply only to the orderers, and may be safely
     # used with prior release peers.
     # Set the value of the capability to true to require it.
     Orderer: &OrdererCapabilities
-        # V1.4.2 for Orderer is a catchall flag for behavior which has been
-        # determined to be desired for all orderers running at the v1.4.2
-        # level, but which would be incompatible with orderers from prior releases.
-        # Prior to enabling V1.4.2 orderer capabilities, ensure that all
-        # orderers on a channel are at v1.4.2 or later.
-        V1_4_2: true
-        # V1.1 for Orderer enables the new non-backwards compatible
-        # features and fixes of fabric v1.1
-        V1_1: false
+        # V2_0 orderer capability ensures that orderers behave according
+        # to v2.0 orderer capabilities. Orderers from
+        # prior releases would behave in an incompatible way, and are therefore
+        # not able to participate in channels at v2.0 orderer capability.
+        # Prior to enabling V2.0 orderer capabilities, ensure that all
+        # orderers on channel are at v2.0.0 or later.
+        V2_0: true
 
     # Application capabilities apply only to the peer network, and may be safely
     # used with prior release orderers.
     # Set the value of the capability to true to require it.
     Application: &ApplicationCapabilities
-        # V1.4.2 for Application enables the new non-backwards compatible
-        # features and fixes of fabric v1.4.2.
-        V1_4_2: true
-        # V1.3 for Application enables the new non-backwards compatible
-        # features and fixes of fabric v1.3.
-        V1_3: false
-        # V1.2 for Application enables the new non-backwards compatible
-        # features and fixes of fabric v1.2 (note, this need not be set if
-        # later version capabilities are set)
-        V1_2: false
-        # V1.1 for Application enables the new non-backwards compatible
-        # features and fixes of fabric v1.1 (note, this need not be set if
-        # later version capabilities are set).
-        V1_1: false
+        # V2_0 application capability ensures that peers behave according
+        # to v2.0 application capabilities. Peers from
+        # prior releases would behave in an incompatible way, and are therefore
+        # not able to participate in channels at v2.0 application capability.
+        # Prior to enabling V2.0 application capabilities, ensure that all
+        # peers on channel are at v2.0.0 or later.
+        V2_0: true
 
 ################################################################################
 #
@@ -187,6 +177,12 @@ Application: &ApplicationDefaults
         Admins:
             Type: ImplicitMeta
             Rule: "MAJORITY Admins"
+        LifecycleEndorsement:
+            Type: ImplicitMeta
+            Rule: "MAJORITY Endorsement"
+        Endorsement:
+            Type: ImplicitMeta
+            Rule: "MAJORITY Endorsement"
     # Capabilities describes the application level capabilities, see the
     # dedicated Capabilities section elsewhere in this file for a full
     # description
@@ -253,12 +249,6 @@ Orderer: &OrdererDefaults
         BlockValidation:
             Type: ImplicitMeta
             Rule: "ANY Writers"
-
-    # Capabilities describes the orderer level capabilities, see the
-    # dedicated Capabilities section elsewhere in this file for a full
-    # description
-    Capabilities:
-        <<: *OrdererCapabilities
 
 ################################################################################
 #
